generado modulo de receta virtual, falta poder agregar paciente

--- a/activos_comunitarios_app/templates/partials/sidebar.html
+++ b/activos_comunitarios_app/templates/partials/sidebar.html
@@ -15,15 +15,10 @@
         <!-- CTA BUTTON -->
         <div class="px-4 mb-3">
 
-            <a href="{% url 'add_assets' %}"
+            <a href="{% url 'create_recipe' %}"
                 class="flex items-center justify-center gap-2 bg-primary text-white py-2.5 rounded-lg hover:bg-primary/90 transition">
-
-                <span class="material-symbols-outlined text-sm">
-                    add
-                </span>
-
-                Nuevo Activo
-
+                <span class="material-symbols-outlined text-sm">add</span>
+                Nueva Receta Social
             </a>
 
         </div>
